--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -344,8 +344,9 @@
                                                                 </table>
                                                             {% elif field.name.endswith('surface_type') %}
                                                                 <div class="field ml-4" style="display: none" id="surface_type_field">
-                                                                    <label id="surface_type_label" class="label">
+                                                                    <label class="label">
                                                                         {{ field.label }}
+                                                                        <span class="has-text-danger">*</span>
                                                                     </label>
                                                                     <div class="control">
                                                                         {{ field() }}
@@ -611,14 +612,11 @@
         function toggleSurfaceTypeInput(subform) {
             const testMethod = subform.find('input[type="radio"][name$="test_method"]:checked').val();
             const surfaceTypeField = subform.find('#surface_type_field');
-            const surfaceTypeLabel = subform.find('label[id$="surface_type_label"]');
             const surfaceTypeInput = subform.find('input[name$="surface_type"]');
             const surfaceTypeOtherField = subform.find('input[name$="surface_type_other"]');
 
             if (testMethod && testMethod.includes('Modified ASTM E1053-20')) {
                 surfaceTypeField.show()
-                surfaceTypeInput.prop('disabled', false)
-
                 surfaceTypeInput.prop('required', true)
                     .attr('oninvalid', "this.setCustomValidity('กรุณาเลือกชนิดพื้นผิว')");
 
@@ -627,9 +625,6 @@
                         this.setCustomValidity('');
                     });
                 });
-
-                surfaceTypeLabel.html('<label class="label">ชนิดพื้นผิว<span class="has-text-danger ml-1">*</span></label>');
-
             } else {
                 surfaceTypeInput.each(function () {
                     let name = $(this).attr('name');
@@ -638,11 +633,9 @@
                     }
                 });
                 surfaceTypeField.hide()
-                surfaceTypeInput.prop('disabled', true);
+                surfaceTypeInput.prop('required', false)
                 surfaceTypeInput.prop('checked', false)
-                surfaceTypeOtherField.closest('.field').hide();
                 surfaceTypeOtherField.val('');
-                surfaceTypeLabel.html('<label class="label">ชนิดพื้นผิว</label>');
             }
         }
 
