--- a/app/templates/service_admin/forms/virus_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_disinfection_request_form.html
@@ -344,7 +344,10 @@
                                                                 </table>
                                                             {% elif field.name.endswith('surface_type') %}
                                                                 <div class="field ml-4" style="display: none" id="surface_type_field">
-                                                                    <label id="surface_type_label" class="label">{{ field.label }}</label>
+                                                                    <label class="label">
+                                                                        {{ field.label }}
+                                                                        <span class="has-text-danger">*</span>
+                                                                    </label>
                                                                     <div class="control">
                                                                         {{ field() }}
                                                                     </div>
@@ -563,6 +566,23 @@
         });
     </script>
     <script>
+        function toggleTable(subform) {
+            const table = subform.find('table');
+            table.on('input', 'input[type="text"]', function () {
+                table.find('tbody tr input[type="text"]').each(function () {
+                    const name = $(this).attr('name');
+                    const isOptional = name.endsWith('ratio');
+                    if (!isOptional && !$(this).val()) {
+                        $(this).prop('required', true).attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
+                            .attr('oninput', "this.setCustomValidity('')");
+                    } else {
+                        $(this).prop('required', false);
+                        this.setCustomValidity('');
+                    }
+                });
+            });
+        }
+
         function addRequiredField(subform) {
             const testMethodInput = subform.find('input[name$="test_method"]');
             const injectTypeInput = subform.find('input[name$="inject_type"]');
@@ -609,7 +629,6 @@
         function toggleSurfaceTypeInput(subform) {
             const testMethod = subform.find('input[type="radio"][name$="test_method"]:checked').val();
             const surfaceTypeField = subform.find('#surface_type_field');
-            const surfaceTypeLabel = subform.find('label[id$="surface_type_label"]');
             const surfaceTypeInput = subform.find('input[name$="surface_type"]');
             const surfaceTypeOtherField = subform.find('input[name$="surface_type_other"]');
 
@@ -617,14 +636,12 @@
                 surfaceTypeField.show()
                 surfaceTypeInput.prop('required', true)
                     .attr('oninvalid', "this.setCustomValidity('กรุณาเลือกชนิดพื้นผิว')");
+
                 surfaceTypeInput.on('change', function () {
                     surfaceTypeInput.each(function () {
                         this.setCustomValidity('');
                     });
                 });
-
-                surfaceTypeLabel.html('<label class="label">ชนิดพื้นผิว<span class="has-text-danger ml-1">*</span></label>');
-
             } else {
                 surfaceTypeInput.each(function () {
                     let name = $(this).attr('name');
@@ -633,11 +650,9 @@
                     }
                 });
                 surfaceTypeField.hide()
-                surfaceTypeInput.prop('disabled', true);
+                surfaceTypeInput.prop('required', false)
                 surfaceTypeInput.prop('checked', false)
-                surfaceTypeOtherField.closest('.field').hide();
                 surfaceTypeOtherField.val('');
-                surfaceTypeLabel.html('<label class="label">ชนิดพื้นผิว</label>');
             }
         }
 
@@ -648,16 +663,18 @@
 
             if (surfaceTypeField && surfaceTypeField.includes('อื่นๆ โปรดระบุ')) {
                 surfaceTypeOtherField.show();
-                surfaceTypeOtherInput.prop('required', true).attr('oninvalid', "this.setCustomValidity('กรุณากรอกชนิดพท้นผิว')")
+                surfaceTypeOtherInput.prop('required', true).attr('oninvalid', "this.setCustomValidity('กรุณากรอกชนิดพื้นผิว')")
                     .attr('oninput', "this.setCustomValidity('')");
             } else {
                 surfaceTypeOtherField.hide();
+                surfaceTypeOtherInput.prop('required', false)
                 surfaceTypeOtherInput.val('');
             }
         }
 
         $('.subform-card').each(function () {
             const subform = $(this);
+            toggleTable(subform);
             addRequiredField(subform);
             toggleSurfaceTypeInput(subform);
             showSurfaceTypeOtherInput(subform);
