--- a/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
@@ -260,6 +260,31 @@
 {% block scripts %}
     {{ super() }}
     <script>
+        function toggleTable(subform) {
+            const table = subform.find('table');
+
+            function validateInput() {
+                table.find('tbody tr').each(function () {
+                    const textInputs = $(this).find('input[type="text"]');
+
+                    textInputs.each(function () {
+                        const name = $(this).attr('name');
+                        const isOptional = name.endsWith('ratio');
+
+                        if (!isOptional) {
+                            $(this)
+                                .prop('required', true)
+                                .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
+                                .attr('oninput', "this.setCustomValidity('')");
+                        } else {
+                            $(this).prop('required', false);
+                            this.setCustomValidity('');
+                        }
+                    })
+                });
+            }
+            validateInput();
+        }
         function addRequiredField(subform) {
             const cleanTypeInput = subform.find('input[name$="clean_type"]');
 
@@ -290,6 +315,7 @@
 
         $('.subform-card').each(function () {
             const subform = $(this);
+            toggleTable(subform);
             addRequiredField(subform);
             showClenTypeOtherInput(subform);
             subform.find('input[type="radio"][name$="clean_type"]').change(function () {
