--- a/app/templates/service_admin/forms/virus_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_disinfection_request_form.html
@@ -568,19 +568,28 @@
     <script>
         function toggleTable(subform) {
             const table = subform.find('table');
-            table.on('input', 'input[type="text"]', function () {
-                table.find('tbody tr input[type="text"]').each(function () {
-                    const name = $(this).attr('name');
-                    const isOptional = name.endsWith('ratio');
-                    if (!isOptional && !$(this).val()) {
-                        $(this).prop('required', true).attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
-                            .attr('oninput', "this.setCustomValidity('')");
-                    } else {
-                        $(this).prop('required', false);
-                        this.setCustomValidity('');
-                    }
+
+            function validateInput() {
+                table.find('tbody tr').each(function () {
+                    const textInputs = $(this).find('input[type="text"]');
+
+                    textInputs.each(function () {
+                        const name = $(this).attr('name');
+                        const isOptional = name.endsWith('ratio');
+
+                        if (!isOptional) {
+                            $(this)
+                                .prop('required', true)
+                                .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
+                                .attr('oninput', "this.setCustomValidity('')");
+                        } else {
+                            $(this).prop('required', false);
+                            this.setCustomValidity('');
+                        }
+                    })
                 });
-            });
+            }
+            validateInput();
         }
 
         function addRequiredField(subform) {
