--- a/app/templates/academic_services/forms/virus_air_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_air_disinfection_request_form.html
@@ -310,6 +310,7 @@
                     .attr('oninput', "this.setCustomValidity('')");
             } else {
                 cleanTypeOtherField.hide();
+                cleanTypeOtherInput.prop('required', false)
                 cleanTypeOtherInput.val('');
             }
         }
