--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -675,6 +675,7 @@
                     .attr('oninput', "this.setCustomValidity('')");
             } else {
                 surfaceTypeOtherField.hide();
+                surfaceTypeOtherInput.prop('required', false)
                 surfaceTypeOtherInput.val('');
             }
         }
