--- a/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
@@ -309,6 +309,7 @@
                     .attr('oninput', "this.setCustomValidity('')");
             } else {
                 cleanTypeOtherField.hide();
+                cleanTypeOtherInput.prop('required', false)
                 cleanTypeOtherInput.val('');
             }
         }
