--- a/app/templates/service_admin/partials/virus_disinfection_request_condition_form.html
+++ b/app/templates/service_admin/partials/virus_disinfection_request_condition_form.html
@@ -258,6 +258,7 @@
                 .attr('oninput', "this.setCustomValidity('')");
         } else {
             surfaceTypeOtherField.hide();
+            surfaceTypeOtherInput.prop('required', false)
             surfaceTypeOtherInput.val('');
         }
     }
