Edited size th of virus_disinfection_request_condition_form template and virus_disinfection_request_form template fo academic_services and service_admin templates

--- a/app/templates/academic_services/partials/virus_disinfection_request_condition_form.html
+++ b/app/templates/academic_services/partials/virus_disinfection_request_condition_form.html
@@ -12,12 +12,16 @@
                             {% if loop.first %}
                                 {% for _field in subform %}
                                     {% if _field.type != 'CSRFTokenField' %}
-                                        <th style="border: none">
-                                            {{ _field.label.text }}
-                                            {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
-                                                <span class="has-text-danger">*</span>
-                                            {% endif %}
-                                        </th>
+                                        {% if _field.type == 'SelectField' %}
+                                            <th style="border: none; width: 16.5em">
+                                                {% else %}
+                                            <th style="border: none">
+                                        {% endif %}
+                                        {{ _field.label.text }}
+                                        {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
+                                            <span class="has-text-danger">*</span>
+                                        {% endif %}
+                                    </th>
                                     {% endif %}
                                 {% endfor %}
                             {% endif %}
