--- a/app/templates/service_admin/forms/virus_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_disinfection_request_form.html
@@ -249,7 +249,11 @@
                                                                         {% if loop.first %}
                                                                             {% for _field in subfield %}
                                                                                 {% if _field.type != 'CSRFTokenField' %}
-                                                                                    <th style="border: none">
+                                                                                    {% if _field.type == 'SelectField' %}
+                                                                                        <th style="border: none; width: 16.5em">
+                                                                                    {% else %}
+                                                                                        <th style="border: none">
+                                                                                    {% endif %}
                                                                                         {{ _field.label.text }}
                                                                                         {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
                                                                                             <span class="has-text-danger">*</span>
@@ -267,7 +271,7 @@
                                                                                     {% if _field.type != 'CSRFTokenField' %}
                                                                                         <td style="border: none">
                                                                                             {% if _field.type == 'SelectField' %}
-                                                                                                <div class="select">
+                                                                                                <div class="select is-fullwidth">
                                                                                                     {{ _field() }}
                                                                                                 </div>
                                                                                             {% else %}
