--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -249,12 +249,16 @@
                                                                             {% if loop.first %}
                                                                                 {% for _field in subfield %}
                                                                                     {% if _field.type != 'CSRFTokenField' %}
+                                                                                        {% if _field.type == 'SelectField' %}
+                                                                                        <th style="border: none; width: 16.5em">
+                                                                                    {% else %}
                                                                                         <th style="border: none">
-                                                                                            {{ _field.label.text }}
-                                                                                            {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
-                                                                                                <span class="has-text-danger">*</span>
-                                                                                            {% endif %}
-                                                                                        </th>
+                                                                                    {% endif %}
+                                                                                        {{ _field.label.text }}
+                                                                                        {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
+                                                                                            <span class="has-text-danger">*</span>
+                                                                                        {% endif %}
+                                                                                    </th>
                                                                                     {% endif %}
                                                                                 {% endfor %}
                                                                             {% endif %}
