Edited condition in virus_air_disinfection_request_form template, virus_disinfection_request_condition_form template and virus_disinfection_request_form template fo academic_services and service_admin templates

--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -673,7 +673,7 @@
             const surfaceTypeOtherInput = subform.find('input[name$="surface_type_other"]');
             const surfaceTypeOtherField = surfaceTypeOtherInput.closest('.field');
 
-            if (surfaceTypeField && surfaceTypeField.includes('อื่นๆ โปรดระบุ')) {
+            if (surfaceTypeField && surfaceTypeField.includes('อื่น ๆ')) {
                 surfaceTypeOtherField.show();
                 surfaceTypeOtherInput.prop('required', true).attr('oninvalid', "this.setCustomValidity('กรุณากรอกชนิดพท้นผิว')")
                     .attr('oninput', "this.setCustomValidity('')");
